--- a/SaySeeSvelteKit/package.json
+++ b/SaySeeSvelteKit/package.json
@@ -24,5 +24,8 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"swiper": "^9.2.4"
+	}
 }
